--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@emotion/react": "^11.1.4",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.6",
