--- a/package.json
+++ b/package.json
@@ -44,7 +44,11 @@
     ]
   },
   "devDependencies": {
+    "@types/reach__router": "^1.3.6",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "cross-env": "^7.0.3",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "typescript": "^4.1.3"
   }
 }
